# airflow-example

./: .gitignore  README.md  pyproject.toml
dags/: 1_minimum_dag.py  2_minimum_dag_with_taskflow.py  3_aip_82.py  4_asset.py  workflow_example1.py  workflow_example2.py  workflow_example3.py
patch/: standalone_command.py
