[project]
name = "airflow-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.0b4",
    "apache-airflow-providers-celery==3.10.4b1",
    "apache-airflow-providers-cncf-kubernetes==10.4.0b1",
    "apache-airflow-providers-common-compat==1.6.0b1",
    "apache-airflow-providers-common-io==1.5.2b1",
    "apache-airflow-providers-common-sql==1.24.1b1",
    "apache-airflow-providers-fab==2.0.0b1",
    "apache-airflow-providers-openlineage==2.1.2b1",
    "apache-airflow-providers-standard==0.2.0b1",
    "apache-airflow-task-sdk==1.0.0b4",
]
